# cuda-pratice

./: .gitignore  CMakeLists.txt  README.md  main.cu
cudapractice/: CMakeLists.txt
cudapractice/include/cudapractice/: helper_cuda.cuh  helper_string.cuh
cudapractice/src/: main.cu
